--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ path = "src/lib.rs"
 [dependencies]
 anyhow = "1.0.43"
 clap = "3.0.0-beta"
+colored = "2.0.0"
 log = "0.4.14"
 thiserror = "1.0.28"
