--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,8 @@ jobs:
 
       - name: Run tests
         run: cargo test
+
+      - name: Run functional test
+        run: |
+          make test-new
+          make test-new-async
