--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,7 @@ colored = "2.0.0"
 env_logger = "0.9.0"
 log = "0.4.14"
 pwasm-utils = "0.18.2"
+reqwest =  { version = "0.11.5", default-features = false, features = ["blocking", "json"] }
+serde = "1.0.130"
+serde_json = "1.0.68"
 thiserror = "1.0.30"
