--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-program"
-version = "0.0.4"
+version = "0.0.5-beta"
 edition = "2018"
 license = "GPL-3.0"
 description = "Utility to simplify Gear programs development"
@@ -25,8 +25,11 @@ clap = { version = "3.0.0-rc.7", features = ["cargo", "derive"] }
 colored = "2.0.0"
 env_logger = "0.9.0"
 log = "0.4.14"
+parity-scale-codec = "2.3.1"
 pwasm-utils = "0.18.2"
 reqwest =  { version = "0.11.7", default-features = false, features = ["blocking", "json"] }
 serde = "1.0.132"
 serde_json = "1.0.73"
+sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
+subxt = { git = "https://github.com/paritytech/subxt" }
 thiserror = "1.0.30"
