--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,7 @@ env_logger = "0.9.0"
 log = "0.4.14"
 parity-scale-codec = "2.3.1"
 pwasm-utils = "0.18.2"
-reqwest =  { version = "0.11.7", default-features = false, features = ["blocking", "json"] }
-serde = "1.0.132"
-serde_json = "1.0.73"
+rhai = "1.3.0"
 sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
 subxt = { git = "https://github.com/paritytech/subxt" }
 thiserror = "1.0.30"
