--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,4 +31,4 @@ rhai = "1.3.0"
 sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
 subxt = { git = "https://github.com/paritytech/subxt" }
 thiserror = "1.0.30"
-tokio = { version = "1.15.0", features = ["rt"] }
+tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
